refactor: update templates and refactor mail service for pass recovery and account activation

--- a/src/mail/templates/resetpassword.hbs
+++ b/src/mail/templates/resetpassword.hbs
@@ -110,7 +110,7 @@
                     <table border="0" cellspacing="0" cellpadding="0">
                       <tr>
                         <td align="center" style="border-radius: 4px; background-color: #A39D7D;">
-                          <a href="{{resetLink}}" target="_blank"
+                          <a href="{{link}}" target="_blank"
                             style="font-size: 16px; font-family: Arial, sans-serif; color: #2C2C2C; text-decoration: none; padding: 15px 30px; border-radius: 4px; border: 1px solid #A39D7D; display: inline-block; font-weight: bold;">
                             REDEFINIR SENHA
                           </a>
@@ -121,11 +121,10 @@
                 </tr>
 
                 <tr>
-                  <td align="center" class="light-text"
-                    style="padding-top: 10px; font-size: 12px; line-height: 18px; color: #CCCCCC;">
+                  <td align="center" class="light-text" style="padding-top: 10px; font-size: 12px; line-height: 18px; color: #CCCCCC;">
                     Se o botão não funcionar, copie e cole o seguinte link em seu navegador:<br>
-                    <a href="{{resetLink}}" target="_blank" class="bronze-highlight"
-                      style="color: #2C2C2C; word-break: break-all; text-decoration: underline;">{{resetLink}}</a>
+                    <a href="{{link}}" target="_blank" class="bronze-highlight"
+                      style="color: #A39D7D; word-break: break-all; text-decoration: underline;">{{link}}</a>
                   </td>
                 </tr>
 
