fix: ajust variable link

--- a/src/mail/templates/activation.hbs
+++ b/src/mail/templates/activation.hbs
@@ -107,8 +107,8 @@
                     <table border="0" cellspacing="0" cellpadding="0">
                       <tr>
                         <td align="center" style="border-radius: 4px; background-color: #2C2C2C;">
-                          <a href="{{activationLink}}" target="_blank"
-                            style="font-size: 16px; font-family: Arial, sans-serif; color: #F0F0F0; text-decoration: none; padding: 15px 30px; border-radius: 4px; border: 1px solid #A39D7D; display: inline-block; font-weight: bold;">
+                          <a href="{{link}}" target="_blank"
+                            style="font-size: 16px; font-family: Arial, sans-serif; color: #2C2C2C; text-decoration: none; padding: 15px 30px; border-radius: 4px; border: 1px solid #A39D7D; display: inline-block; font-weight: bold;">
                             ATIVAÇÃO DE SENHA
                           </a>
                         </td>
